The pdf is loosing quality on some pages, which is not the case on other navigators
Categories
(Firefox :: PDF Viewer, defect)
Tracking
()
People
(Reporter: ali.h.elzein, Assigned: lsalzman)
References
(Regression)
Details
(Keywords: regression)
Attachments
(4 files)
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:98.0) Gecko/20100101 Firefox/98.0
Steps to reproduce:
I uploaded two pdf files on my project website.
Actual results:
When I open them on firefox, some pages (in both documents) are loosing quality.
Expected results:
The quality should remain the same for all pages as it was on the pdf originally.
Reporter | ||
Updated•3 years ago
|
Comment 1•3 years ago
|
||
The Bugbug bot thinks this bug should belong to the 'Firefox::PDF Viewer' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.
Reporter | ||
Comment 3•3 years ago
|
||
(In reply to Marco Castelluccio [:marco] from comment #2)
Could you upload the PDFs here?
You can find the two pdfs at the following link :
https://web.msh-lse.fr/covimob/page-2/
Thank you
Comment 4•3 years ago
|
||
Comment 5•3 years ago
|
||
The text on page 1 is really badly rendered on windows 11.
Comment 6•3 years ago
|
||
The colors on the chart on page 2 are not the same as in Acrobat (on the left).
There is an aa issue on page 3 on the chart in the bottom right (orange & green curves)
Comment 7•3 years ago
|
||
Mozregression gives the following pushlog:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=11be5c709974daba11da37737a6fc37cc7a13711&tochange=6616fe7301d4342db2cf70500cdd744f0d47d200
Assignee | ||
Updated•3 years ago
|
Updated•3 years ago
|
Comment 9•3 years ago
|
||
Odd -- it looks like the same (embedded Type 1) fonts are used throughout, but on some pages only, they render really poorly on Windows. (On macOS, I don't see any obvious difference between the pages.)
On the "bad" pages, it looks like the font is being rendered without any hinting or antialiasing. Could we be hitting a "render glyphs as paths" codepath for some reason?
I also notice that if I do a Print / Save to PDF operation with this document, it appears to generate a pre-rasterized PDF file (which faithfully reflects the poor rendering on some pages, but even the "good" pages are bitmapped rather than containing real fonts and glyphs).
I'm not sure what it is about this PDF that is causing us to hit the rasterize-and-render-as-bitmap codepath, but given the regression range in comment 7, it seems like clipMask and/or blendMode would be the places to start looking.
Updated•3 years ago
|
Updated•3 years ago
|
Assignee | ||
Comment 10•3 years ago
|
||
It seems as if any attempt to use PushLayer with the Blend effect causes alpha
to be incorrectly blended. Using FillGeometry explicitly with the clip geometry
and D2D1_PRIMITIVE_BLEND_COPY seems to work around this.
Updated•3 years ago
|
Comment 11•3 years ago
|
||
Comment 12•3 years ago
|
||
bugherder |
Assignee | ||
Updated•3 years ago
|
Updated•3 years ago
|
Updated•3 years ago
|
Reproducible on Firefox 98.0(20220304153049) on Win10 64-bits. Verified as fixed on Firefox 100.0(20220428192727) and Nightly 101.0a1(20220501190841) on Win10 64-bits. MacOS and Linux seem to be unaffected.
Description
•