Bug 1759715 - Avoid using layers with D2D blend effect. r=aosmond

It seems as if any attempt to use PushLayer with the Blend effect causes alpha
to be incorrectly blended. Using FillGeometry explicitly with the clip geometry
and D2D1_PRIMITIVE_BLEND_COPY seems to work around this.

Differential Revision: https://phabricator.services.mozilla.com/D142501